make the application working